--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@vercel/node": "^2.15.8"
+    "@types/node": "^20.4.8",
+    "@vercel/node": "^2.15.8",
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@vercel/kv": "^0.2.2",
+    "openai": "^3.3.0"
   }
 }
